--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ------------------------------- 1. Global Styles -------------------------------- */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Playfair+Display:wght@800&display=swap');
+
+/* --------------- 1.1 CSS reset ------------------- */
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, *:before, *:after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
+
+/* --------------- 1.2 Colors ------------------- */
+
+:root {
+  --main-focus-color: #084D5C;
+  --main-light-color: #F5F4F5;
+  --main-gradient-color-light: 152,223,207,1;
+  --main-gradient-color-dark: 0,69,108,1;
+}
+
+/* ------------------------------- 2. Typography ----------------------------------- */
+
+:root {
+  font-size: 0.75em;
+}
+
+@media screen and (min-width: 31em) {
+  :root {
+    font-size: 0.85em;
+  }
+}
+
+@media screen and (min-width: 80em) {
+  :root {
+    font-size: 1em;
+  }
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Playfair Display', serif;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+  color: var(--main-focus-color);
+}
+
+/* ------------------------------- 3. Layout --------------------------------------- */
+
+.outer-container__reusable {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.inner-container__reusable {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 22px 22px;
+  flex-basis: 100%;
+  height: 100vh;
+  background: linear-gradient(0deg, rgba(var(--main-gradient-color-light)) 0%, rgba(var(--main-gradient-color-dark)) 86%);
+}
+
+/* ------------------------------- 4. Media queries -------------------------------- */
+
+/* --------------- 4.2 Fonts ------------------- */
+
+
