--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -7,6 +7,7 @@
     font-size: 1.1rem;
     font-weight: 300;
     box-shadow: 0 5px 8px var(--main-focus-color);
+    z-index: 1;
 }
 
 .button--light {
