--- a/src/index.css
+++ b/src/index.css
@@ -56,21 +56,28 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(0deg, rgba(var(--main-gradient-color-light)) 0%, rgba(var(--main-gradient-color-dark)) 86%);
 }
 
 .inner-container__reusable {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 22px 22px;
-  flex-basis: 100%;
+  /*padding: 22px 22px;*/
+  width: 100vw;
   height: 100vh;
-  background: linear-gradient(0deg, rgba(var(--main-gradient-color-light)) 0%, rgba(var(--main-gradient-color-dark)) 86%);
 }
 
 /* ------------------------------- 4. Media queries -------------------------------- */
 
+@media screen and (min-width: 80em) {
+  .inner-container__reusable {
+    width: 50em;
+    border: 1px solid red;
+  }
+}
 /* --------------- 4.2 Fonts ------------------- */
 
 
