--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@ html {
   --main-light-color: #F5F4F5;
   --main-gradient-color-light: 152,223,207,1;
   --main-gradient-color-dark: 0,69,108,1;
+  --mountain-1: #80D7CD;
+  --mountain-2: #5CCEC7;
+  --mountain-3: #2B7687;
+  --mountain-4: #084D5C;;
+
 }
 
 /* ------------------------------- 2. Typography ----------------------------------- */
@@ -62,12 +67,14 @@ body {
 }
 
 .inner-container__reusable {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  /*padding: 22px 22px;*/
+  padding: 22px 22px;
   width: 100vw;
   height: 100vh;
+  overflow : hidden;
 }
 
 /* ------------------------------- 4. Media queries -------------------------------- */
@@ -75,7 +82,6 @@ body {
 @media screen and (min-width: 80em) {
   .inner-container__reusable {
     width: 50em;
-    border: 1px solid red;
   }
 }
 /* --------------- 4.2 Fonts ------------------- */
