--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -2,6 +2,7 @@
     width: 15rem;
     height: 3rem;
     align-self: center;
+    margin: 1.1em 1.1em;
     border-radius: 15px;
     border: none;
     font-size: 1.1rem;
