--- a/src/components/modalScreen/ModalScreen.css
+++ b/src/components/modalScreen/ModalScreen.css
@@ -2,12 +2,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 25em;
-    height: 39em;
+    align-items: center;
+    width: 26em;
+    height: 40em;
     background: var(--main-light-color);
     align-self: center;
-    padding: 2.4em 1.35em 1.8em 1.35em;
+    padding: 2.4em 2em 1.8em 2em;
     margin: 6em 0;
     border-radius: 15px;
     z-index: 1;
+}
+.modal__header {
+    align-self: flex-start;
 }
