--- a/src/components/authorization/Authorization.css
+++ b/src/components/authorization/Authorization.css
@@ -7,12 +7,17 @@
     width: 21rem;
     height: 3rem;
     margin: 0.6em;
+    padding-left: 1em;
     border: 1px solid var(--main-focus-color);
     border-radius: 15px;
 }
 
-.form__label {
+.form__label, .form__input--alert {
     align-self: flex-start;
     padding-left: 1.1em;
+}
+
+.form__input--alert {
+    font-weight: 600;
 }
 
