--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 1.4rem 1.4rem;
+  padding: 1.4rem 0 0 0;
   width: 100vw;
   height: 100vh;
   overflow : hidden;
