--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -13,9 +13,10 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 4.7em;
+    height: 4.9em;
     background-color: var(--main-focus-color);
     border-radius: 15px 15px 0 0;
+    box-shadow: 0 -4px 4px 0 var(--main-shadow-color-dark);
 }
 
 .navigation__list {
@@ -27,14 +28,34 @@
 
 
 .navigation__link {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: var(--main-light-color);
+    font-weight: 300;
+    font-size: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .navigation__icon {
-    width: 2.35em;
-    height: 2.35em;
+    width: 2.3em;
+    height: 2.3em;
+    margin-bottom: 0.4em;
+}
+
+.navigation__icon--big {
+    position: absolute;
+    width: 4em;
+    height: 4em;
+    top: -4em;
+    background: var(--main-focus-color);
+    border: 0.4em solid var(--main-focus-color);
+    border-radius: 30px 30px 0 0;
+}
+
+.navigation__link--big {
+    top: 2.65em;
 }
