--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 4.9em;
+    height: 5.4em;
     background-color: var(--main-focus-color);
     border-radius: 15px 15px 0 0;
     box-shadow: 0 -4px 4px 0 var(--main-shadow-color-dark);
@@ -27,7 +27,7 @@
 }
 
 
-.navigation__link {
+.navigation__link, .navigation__link--active {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -38,6 +38,29 @@
     font-size: 1rem;
     text-decoration: none;
     text-transform: uppercase;
+    transition: 1ms;
+}
+
+.navigation__link::after, .navigation__link--active::after {
+    content: "";
+    position: absolute;
+    width: 2.5em;
+    height: 0.2em;
+    background-color: var(--main-light-color);
+    border-radius: 15px;
+    bottom: -0.35em;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.2s ease-out;
+}
+
+.navigation__link:hover::after {
+    transform: scaleX(1);
+    transform-origin: center;
+}
+
+.navigation__link--active::after {
+    transform: scaleX(1);
 }
 
 .navigation__icon {
@@ -57,5 +80,5 @@
 }
 
 .navigation__link--big {
-    top: 2.65em;
+    top: 2.7em;
 }
