--- a/src/pages/myJourney/MyJourney.css
+++ b/src/pages/myJourney/MyJourney.css
@@ -175,3 +175,88 @@
     width: 1em;
     height: 1em;
 }
+
+/*Cloud*/
+.my-journey__art--item8 {
+    top: 10em;
+    right: 13em;
+}
+
+.item8__cloud {
+    position: relative;
+    width: 2.5em;
+    height: 2.2em;
+    background-color: var(--css-art-lighter);
+    border-radius: 50%;
+}
+
+.item8__cloud1 {
+    box-shadow:
+            var(--css-art-lighter) 1em -0.5em 0 0,
+            var(--css-art-lighter) 1.5em -0.2em 0 0.1em,
+            var(--css-art-lighter) 2.5em 0em 0 -0.4em;
+}
+
+.item8__cloud2 {
+    top: 2em;
+    right: -5em;
+    transform: scale(75%);
+    box-shadow:
+            var(--css-art-lighter) -1em 0.2em 0 -0.35em,
+            var(--css-art-lighter) 1em 0.2em 0 -0.35em;
+}
+
+@media screen and (min-width: 80em) {
+    .my-journey__art--item8 {
+        right: 17em;
+    }
+}
+
+/*tent*/
+.my-journey__art--item9 {
+    position: relative;
+    width: 3.6em;
+    height: 1.9em;
+    left: 14em;
+    top: 30em;
+    background-color: var(--css-art-lighter);
+    border-radius: 2em 2em 0 0;
+}
+
+.my-journey__art--item9::before {
+    content: "";
+    position: absolute;
+    left: 0.9em;
+    width: 2em;
+    height: 1.6em;
+    bottom: 0;
+    background-color: var(--css-art-dark);
+    clip-path: polygon(50% 0, 50% 0, 65% 100%, 35% 100%);
+}
+
+.item9__tent-line {
+    position: absolute;
+    bottom: -0.3em;
+    left: -0.3em;
+    width: 0.15em;
+    height: 1.2em;
+    background-color: var(--css-art-dark);
+    border-radius: 15px;
+    transform: rotate(45deg);
+}
+
+.item9__tent-line::before {
+    content: "";
+    position: absolute;
+    width: 0.5em;
+    height: 0.25em;
+    bottom: 0;
+    left: -0.3em;
+    background-color: var(--css-art-darker);
+    transform: rotate(30deg);
+}
+
+.item9__tent-line--right {
+    left: 3.8em;
+    transform: scaleX(-1) rotate(45deg);
+}
