--- a/src/pages/myJourney/MyJourney.css
+++ b/src/pages/myJourney/MyJourney.css
@@ -176,13 +176,13 @@
     height: 1em;
 }
 
-/*Cloud*/
+/*Cloud 1*/
 .my-journey__art--item8 {
     top: 10em;
     right: 13em;
 }
 
-.item8__cloud {
+.my-journey__art--cloud {
     position: relative;
     width: 2.5em;
     height: 2.2em;
@@ -197,14 +197,6 @@
             var(--css-art-lighter) 2.5em 0em 0 -0.4em;
 }
 
-.item8__cloud2 {
-    top: 2em;
-    right: -5em;
-    transform: scale(75%);
-    box-shadow:
-            var(--css-art-lighter) -1em 0.2em 0 -0.35em,
-            var(--css-art-lighter) 1em 0.2em 0 -0.35em;
-}
 
 @media screen and (min-width: 80em) {
     .my-journey__art--item8 {
@@ -217,7 +209,7 @@
     position: relative;
     width: 3.6em;
     height: 1.9em;
-    left: 14em;
+    left: 13.8em;
     top: 30em;
     background-color: var(--css-art-lighter);
     border-radius: 2em 2em 0 0;
@@ -260,3 +252,128 @@
     left: 3.8em;
     transform: scaleX(-1) rotate(45deg);
 }
+
+/*Campfire*/
+.my-journey__art--item10 {
+    position: relative;
+    top: 30em;
+    left: 11.4em;
+    width: 0.5em;
+    height: 1.4em;
+    border-radius: 0.75em;
+    background-color: var(--css-art-darker);
+}
+
+.my-journey__art--item10::before {
+    content: "";
+    position: absolute;
+    width: 0.4em;
+    height: 1.3em;
+    border-radius: 0.75em;
+    background-color: var(--css-art-dark);
+    left: -0.4em;
+    bottom: 0;
+    transform: rotate(24deg);
+}
+
+.my-journey__art--item10::after {
+    content: "";
+    position: absolute;
+    width: 0.4em;
+    height: 1.3em;
+    border-radius: 0.75em;
+    background-color: var(--css-art-dark);
+    left: 0.5em;
+    bottom: 0;
+    transform: rotate(-24deg);
+    z-index: 0;
+}
+
+.item10__fire {
+    position: absolute;
+    width: 1.30em;
+    height: 3.7em;
+    bottom: 1.5em;
+    left: -0.38em;
+    background-color: var(--css-art-lighter);
+    --mask:
+            radial-gradient(1.03em at 1.40em 50%,#000 99%,#0000 101%) 0 calc(50% - 1em)/51% 2em repeat-y,
+            radial-gradient(1.03em at -0.9em 50%,#0000 99%,#000 101%) 0.5em 50%/calc(51% - 0.5em) 2em repeat-y,
+            radial-gradient(1.03em at calc(100% - 1.40em) 50%,#000 99%,#0000 101%) 100% calc(50% - 1em)/51% 2em repeat-y,
+            radial-gradient(1.03em at calc(100% + 0.90em) 50%,#0000 99%,#000 101%) calc(100% - 0.5em) 50%/calc(51% - 0.5em) 2em repeat-y;
+    -webkit-mask: var(--mask);
+    mask: var(--mask);
+    z-index: 2;
+}
+
+/*Stones around campfire*/
+.my-journey__art--item11 {
+    top: 33.7em;
+    left: 11.2em;
+    width: 0.7em;
+    height: 0.5em;
+    border-radius: 50%;
+    background-color: var(--css-art-darker);
+    box-shadow:
+            var(--css-art-dark) 0.80em 0 0 -0.02em,
+            var(--css-art-darker) 1.5em -0.35em 0 -0.03em,
+            var(--css-art-dark) 1.5em -0.9em 0 -0.08em,
+            var(--css-art-darker) 1.1em -1.25em 0 -0.1em,
+            var(--css-art-darker) -0.9em -1.25em 0 -0.1em,
+            var(--css-art-dark) -1.3em -0.9em 0 -0.08em,
+            var(--css-art-darker) -1.4em -0.35em 0 -0.03em,
+            var(--css-art-dark) -0.80em 0 0 -0.02em;
+}
+
+/*Cloud 2*/
+.my-journey__art--item12 {
+    top: 14.5em;
+    right: 7.5em;
+}
+.item12__cloud2 {
+    transform: scale(75%);
+    box-shadow:
+            var(--css-art-lighter) -1em 0.2em 0 -0.35em,
+            var(--css-art-lighter) 1em 0.2em 0 -0.35em;
+}
+
+/*Bird*/
+.my-journey__art--item13 {
+    position: relative;
+    left: 10em;
+    top: 3.6em;
+    width: 1em;
+    height: 1em;
+    border-color: var(--css-art-light);
+    border-width: 0.2em 0 0 0;
+    border-style: solid;
+    border-radius: 10em 10em 0 0;
+    transform: rotate(10deg);
+}
+
+.my-journey__art--item13::after {
+    content: "";
+    position: absolute;
+    top: -0.1em;
+    right: -0.8em;
+    width: 0.8em;
+    height: 1em;
+    border-color: var(--css-art-lighter);
+    border-width: 0.2em 0 0 0;
+    border-style: solid;
+    border-radius: 10em 10em 0 0;
+}
+
+/*Grass*/
+
+/*Bird 2*/
+
+/*Bird 3*/
+
+/*Bush*/
+
+/*Large tree*/
+
+/*Stars*/
+
+/*Mountain path*/
