--- a/src/pages/myJourney/MyJourney.css
+++ b/src/pages/myJourney/MyJourney.css
@@ -376,7 +376,7 @@
     transform: scale(0.9);
 }
 
-.item14__grass, .item23__grass {
+.item14__grass, .item23__grass, .item29__grass {
     position: relative;
     width: 0.9em;
     height: 1em;
@@ -387,7 +387,7 @@
     transform: rotate(-12deg);
 }
 
-.item14__grass::before, .item23__grass::before {
+.item14__grass::before, .item23__grass::before, .item29__grass::before {
     content: "";
     position: absolute;
     bottom: -0.1em;
@@ -401,7 +401,7 @@
     transform: rotate(-7deg);
 }
 
-.item14__grass::after, .item23__grass::after {
+.item14__grass::after, .item23__grass::after, .item29__grass::after {
     content: "";
     position: absolute;
     bottom: -0.1em;
@@ -415,13 +415,13 @@
     transform: rotate(15deg) scaleX(-1);
 }
 
-.item14__grass--2, .item23__grass--2 {
+.item14__grass--2, .item23__grass--2, .item29__grass--2 {
     top: -0.3em;
     left: 2.2em;
     transform: scaleX(-1);
 }
 
-.item14__grass--3, .item23__grass--3 {
+.item14__grass--3, .item23__grass--3, .item29__grass--3 {
     top: -0.5em;
     left: -0.5em;
     transform: scale(0.8);
@@ -807,22 +807,145 @@
 
 /*Large tree*/
 .my-journey__art--item27 {
-
+    top: 33.5em;
+    left: -0.6em;
+    width: 3em;
+    height: 7em;
+    background: var(--css-art-dark);
+    border-radius: 47% 53% 45% 55% / 91% 89% 11% 9%;
 }
 
-/*Owl*/
+.my-journey__art--item27::before {
+    content: "";
+    position: absolute;
+    bottom: -0.5em;
+    left: -0.5em;
+    width: 4.1em;
+    height: 2em;
+    background: var(--css-art-dark);
+    border-radius: 49% 51% 51% 49% / 67% 71% 29% 33% ;
+}
+
+.my-journey__art--item27::after {
+    content: "";
+    position: absolute;
+    left: 2em;
+    width: 2.25em;
+    height: 2em;
+    background: var(--css-art-darker);
+    border-radius: 1em;
+    box-shadow:
+            -1em 0 0 0.3em var(--css-art-darker),
+            1em -1em 0 -0.1em var(--css-art-darker),
+            1.2em 0.2em 0 -0.5em var(--css-art-darker),
+            0 -2em 0 0.1em var(--css-art-darker),
+            -1em -2.3em 0 0.3em var(--css-art-darker),
+            -2.5em -1.2em 0 1.3em var(--css-art-darker);
+}
+.item27__tree-decoration {
+    position: absolute;
+    bottom: 2em;
+    left: 0.8em;
+    width: 1.5em;
+    height: 1.8em;
+    background: var(--css-art-darker);
+    border-radius: 1em;
+}
+
+.item27__tree-decoration::before {
+    content: "";
+    position: absolute;
+    top: -0.5em;
+    right: -1.35em;
+    width: 0.6em;
+    height: 2em;
+    background: var(--css-art-dark);
+    border-radius: 48% 52% 47% 53% / 67% 39% 61% 33%;
+    transform: rotate(55deg);
+}
+
+/*Owl/bird*/
 .my-journey__art--item28 {
-
+    top: 35.8em;
+    left: 2.5em;
+    width: 0.8em;
+    height: 1em;
+    background: var(--css-art-darker);
+    border-radius: 48% 52% 47% 53% / 67% 39% 61% 33%;
 }
 
-/*Bush 2*/
-.my-journey__art--item29 {
+.my-journey__art--item28::before {
+    content: "";
+    position: absolute;
+    right: -0.15em;
+    width: 0.3em;
+    height: 0.5em;
+    background: var(--css-art-dark);
+    border-radius: 0 100% 100% 0 / 100% 0 100% 0;
+    transform: rotate(-90deg);
+}
 
+.my-journey__art--item28::after {
+    content: "";
+    position: absolute;
+    top: 0.2em;
+    right: 0.3em;
+    width: 0.2em;
+    height: 0.2em;
+    border-radius: 1em;
+    background: var(--css-art-light);
+}
+
+/*Bird -- feet*/
+.item28__bird {
+    position: absolute;
+    top: 0.9em;
+    left: 0.4em;
+    width: 0.15em;
+    height: 0.4em;
+    border-radius: 1em;
+    background: var(--css-art-darker);
+    transform: rotate(-35deg);
+    box-shadow: 0.2em -0.05em 0 var(--css-art-darker);
+}
+
+/*Bird -- tail*/
+.item28__bird::before {
+    content: "";
+    position: absolute;
+    top: -0.5em;
+    left: -0.35em;
+    width: 0.5em;
+    height: 0.4em;
+    background: var(--css-art-darker);
+    border-radius: 76% 24% 28% 72% / 76% 77% 23% 24%;
+}
+
+/*Grass 3, shares css of item 14*/
+.my-journey__art--item29 {
+    top: 30em;
+    left: 6em;
+    transform: scale(0.9);
 }
 
 /*Flag on mountain*/
 .my-journey__art--item30 {
+    top: 11.1em;
+    left: 14.4em;
+    width: 0.2em;
+    height: 1.2em;
+    border-radius: 1em;
+    background: var(--css-art-darker);
+}
 
+.my-journey__art--item30::before {
+    content: "";
+    position: absolute;
+    top: 0.05em;
+    width: 0.8em;
+    height: 0.5em;
+    background: var(--css-art-darker);
+    border-radius: 0 100% 100% 0 / 100% 38% 62% 0;
 }
 
 /*Fox*/
